--- a/homework/index.html
+++ b/homework/index.html
@@ -6,5 +6,5 @@ date: 2022-01-13
 <h1>{{ page.title }}</h1>
 <ul class="posts">
 <li><a href="/homework/inclass1.xml">In class 1</a></li>
-<li><a href="/homework/inclass4.xml">In class 4</a></li>
+<li><a href="/homework/inclass4.xsl">In class 4</a></li>
 </ul>
