--- a/homework/index.html
+++ b/homework/index.html
@@ -7,5 +7,5 @@ date: 2022-01-13
 <ul class="posts">
 <li><a href="/homework/inclass1.xml">In class 1</a></li>
 <li><a href="/homework/inclass4.xsl">In class 4</a></li>
-<li><a href="/homework/homework3.xsl">Homework 3<a/><li>
+<li><a href="/homework/homework3.xsl">Homework 3</a><li>
 </ul>
